Fix png logo size Align center gifs.

--- a/web/assets/scss/components/menu.scss
+++ b/web/assets/scss/components/menu.scss
@@ -322,9 +322,8 @@ $mobile-contact-height: 40;
 		top:0; left:4rem;
 		z-index:2;
 		transition:0.5s;
-		img {
-			height: 100%;
-		}
+		line-height: rem-calc(63);
+
 		svg {
 			width: 100%;
 			height: 63px;
