--- a/web/assets/scss/sections/home.scss
+++ b/web/assets/scss/sections/home.scss
@@ -261,7 +261,7 @@
 
 	
 	.anim-item {
-		
+		text-align: center;
 	}
 
 	.anim-content{
